completed the assignment

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <title>Responsive Layout</title>
 <style>
@@ -12,17 +13,37 @@
 </style>
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<h1>Pasta menu</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2 Wow this is cool</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 5 This is cool</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
+
+  <section class="col-lg-4 col-md-6 ravioli">
+  <div class="content">
+    <h2>Ravioli</h2>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam voluptatum laudantium non fugiat, earum adipisci repudiandae dicta, animi nam tempora consequatur nemo. Recusandae veritatis maxime repellendus ea alias molestiae! Adipisci!
+    </p>
+  </div>
+  </section>
+
+  <section class="col-lg-4 col-md-6 spaghetti">
+  <div class="content">
+    <h2>Spaghetti</h2>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, adipisci. Obcaecati deleniti commodi fugit doloremque, eveniet impedit numquam, ratione labore mollitia incidunt ducimus repellat atque a! Minus doloribus debitis iusto.
+    </p>
+  </div>
+  </section>
+
+  <section class="col-lg-4 col-md-12 varenyky">
+  <div class="content">
+    <h2>Varenyky</h2>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, reprehenderit repellat quasi cum voluptate sed. Inventore fuga expedita perspiciatis asperiores earum distinctio placeat minima saepe aliquid ab! At, ut doloribus?
+    </p>
+  </div>
+    </section>
+
 </div>
 
 </body>
