updated links to areas

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -46,8 +46,8 @@
 
   <div class="container-fluid">
     <div class="row">
-      <section class="col-md-4 col-sm-6">
-        <div class="content"><h2 class="text-center" id="Chicken">Chicken</h3>
+      <section class="col-md-4 col-sm-6" id="Chicken">
+        <div class="content"><h2 class="text-center">Chicken</h3>
                 <p> 
                 You buy furniture. You tell yourself, this is the last sofa I will ever need in my life. Buy the sofa, then for a couple years you're satisfied that no matter what goes wrong, at least you've got your sofa issue handled. Then the right set of dishes. Then the perfect bed. The drapes. The rug.
                  </p>
@@ -74,8 +74,8 @@
                 </p>
                 <a href="#top" class="text-center">Back to top</a></div>
       </section>
-      <section class="col-md-4 col-sm-6">
-        <div class="content"><h2 class="text-center" id="Beef">Beef</h3>
+      <section class="col-md-4 col-sm-6" id="Beef">
+        <div class="content"><h2 class="text-center">Beef</h3>
                 <p>
                 I know, I know, a house full of condiments and no real food.
                 </p>
@@ -102,8 +102,8 @@
                 </p>
                 <a href="#top" class="text-center">Back to top</a></div>
       </section>
-      <section class="col-md-4 col-sm-12">
-        <div class="content"><h2 class="text-center" id="Sushi">Sushi</h3>
+      <section class="col-md-4 col-sm-12" id="Sushi">
+        <div class="content"><h2 class="text-center">Sushi</h3>
                 <p>
                 I called Tyler.
                 </p>
